manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput-app
  template:
    metadata:
      labels:
        app: logoutput-app
    spec:
      volumes:
        - name: logoutput-volume
          persistentVolumeClaim:
            claimName: logoutput-claim
      containers:
        - name: logoutput-writer-container
          image: logoutput-writer:latest
          volumeMounts:
            - name: logoutput-volume
              mountPath: /usr/src/app/files
        - name: logoutput-reader-container
          image: logoutput-reader:latest
          volumeMounts:
            - name: logoutput-volume
              mountPath: /usr/src/app/files
        - name: pingpong-container
          image: pingpong-app:latest
          volumeMounts:
            - name: logoutput-volume
              mountPath: /usr/src/app/files
