manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
  namespace: log-pingpong-ns
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgresql-db
          image: postgres:latest
          volumeMounts:
            - name: postgres-volume
              mountPath: /data
  volumeClaimTemplates:
      - metadata:
          name: postgres-volume
        spec:
          accessModes: ["ReadWriteOnce"]
          resources:
            requests:
              storage: 5Gi
