manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  selector:
    app: logoutput-app
  ports:
    - protocol: TCP
      port: 2346
      targetPort: 4242
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  selector:
    app: logoutput-app
  ports:
    - protocol: TCP
      port: 2347
      targetPort: 4247
  type: ClusterIP
