manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      types {
          application/javascript js;
      }
spec:
  rules:
  - http:
      paths:
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: logoutput-svc
            port:
              number: 2346
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-svc
            port:
              number: 2347
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 2345
